--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -6,4 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: haskell-actions/setup@v2
+        with:
+          ghc-version: '9.12.1'
+          cabal-version: '3.12.1.0'
       - run: ./dev.sh t
