--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -9,4 +9,4 @@ jobs:
         with:
           ghc-version: '9.4.8'
           cabal-version: '3.12.1.0'
-      - run: ./dev.sh t
+      - run: ./dev t
