--- a/.distrobox.ini
+++ b/.distrobox.ini
@@ -1,7 +1,7 @@
 [poi-dev]
 additional_packages="fd fzf git neovim ripgrep mise make gcc bat"
-home=`pwd`/.distrobox/home
-init_hooks=export XDG_CONFIG_HOME=`pwd`/.distrobox/home/.config
-init_hooks=export XDG_CACHE_HOME=`pwd`/.distrobox/home/.cache
-init_hooks=export XDG_STATE_HOME=`pwd`/.distrobox/home/.local/state
-init_hooks=export XDG_DATA_HOME=`pwd`/.distrobox/home/.local/share
+home=/home/mtwtkman/work/poi/.distrobox/home
+init_hooks=export XDG_CONFIG_HOME=/home/mtwtkman/work/poi/.distrobox/home/.config
+init_hooks=export XDG_CACHE_HOME=/home/mtwtkman/work/poi/.distrobox/home/.cache
+init_hooks=export XDG_STATE_HOME=/home/mtwtkman/work/poi/.distrobox/home/.local/state
+init_hooks=export XDG_DATA_HOME=/home/mtwtkman/work/poi/.distrobox/home/.local/share
