--- a/.distrobox.ini
+++ b/.distrobox.ini
@@ -1,5 +1,5 @@
 [poi-dev]
-additional_packages="fd fzf git neovim ripgrep mise make gcc bat"
+additional_packages="fd fzf git neovim ripgrep make gcc bat"
 home=/home/mtwtkman/work/poi/.distrobox/home
 init_hooks=export XDG_CONFIG_HOME=/home/mtwtkman/work/poi/.distrobox/home/.config
 init_hooks=export XDG_CACHE_HOME=/home/mtwtkman/work/poi/.distrobox/home/.cache
