--- a/poi.cabal
+++ b/poi.cabal
@@ -26,6 +26,7 @@ executable poi
     base,
     poi,
 
+  ghc-options: -threaded
   hs-source-dirs: app
   default-language: Haskell2010
 
@@ -34,8 +35,15 @@ library
   hs-source-dirs: src
   build-depends:
     aeson,
+    brick,
+    microlens,
+    microlens-mtl,
+    microlens-th,
+    mtl,
     optparse-applicative,
     safe,
+    vector,
+    vty,
 
   exposed-modules:
     Poi.Abnormal
@@ -47,6 +55,7 @@ library
     Poi.File.Parser
     Poi.Internal.Debug
     Poi.Prompt
+    Poi.TUI.Main
     Poi.Time
     Poi.Version
 
