--- a/poi.cabal
+++ b/poi.cabal
@@ -42,6 +42,7 @@ library
     mtl,
     optparse-applicative,
     safe,
+    text,
     vector,
     vty,
 
@@ -65,6 +66,7 @@ library
     Poi.Internal.Debug
     Poi.Prompt
     Poi.TUI.App
+    Poi.TUI.FilterInput
     Poi.TUI.State
     Poi.TUI.TrashList
     Poi.TUI.Common
