--- a/poi.cabal
+++ b/poi.cabal
@@ -30,6 +30,19 @@ executable poi
   hs-source-dirs: app
   default-language: Haskell2010
 
+executable gendata
+  import: warnings
+  main-is: Main.hs
+  build-depends:
+    base,
+    poi,
+    random,
+    time,
+
+  ghc-options: -threaded
+  hs-source-dirs: gendata
+  default-language: Haskell2010
+
 flag tui_debug
   description: Turne on debug mode for tui
   default: False
